# primer

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Sales_data.cc  Sales_data.cpp  Sales_data.h  StrBlob.h  avg_price.cc  avg_price.cpp  useBlob.cc
source/: CMakeLists.txt
source/executable/: CMakeLists.txt  avgprice.cpp  querymain.cpp  useblob.cpp  usehasptr.cpp
source/pmclasses/: CMakeLists.txt  avgprice.cpp  salesdata.cpp  salesdata.h
source/pmcopycontrol/: CMakeLists.txt  hasptr.cpp  hasptr.h  hasptrcnt.cpp  hasptrcnt.h  hasptrval.cpp  hasptrval.h
source/pmdynamicmemory/: CMakeLists.txt  queryresult.h  strblob.cpp  strblob.h  textquery.cpp  textquery.h  useblob.cpp
source/pmfunctions/: CMakeLists.txt  makeplural.h
